crates/specforge-cli/tests/snapshots/tests__parity__export__mcp.snap
---
source: crates/specforge-cli/tests/parity.rs
expression: mcp_snap
---
{
  "check": {
    "diagnostics": [],
    "ok": true
  },
  "config": {
    "extensions": [
      "@specforge/software"
    ],
    "name": "demo",
    "registries": [
      {
        "alias": "offline",
        "default_registry": true,
        "url": "http://127.0.0.1:9/v1"
      }
    ],
    "spec_root": "spec",
    "version": "0.1.0"
  },
  "files": {
    "spec/main.spec": "behavior alpha \"Alpha\" {\n  category \"core\"\n  contract \"The system MUST work\"\n}\n"
  },
  "ok": true,
  "payload": {
    "edges": [],
    "format_version": "1.0",
    "nodes": [
      {
        "fields": {
          "category": "core",
          "contract": "The system MUST work"
        },
        "file": "main.spec",
        "id": "alpha",
        "kind": "behavior",
        "line": 1,
        "title": "Alpha"
      }
    ],
    "schema_version": "0.1.0"
  }
}
